# GraphXtractRAG-BioLaySumm

./: .gitignore  0_database_merger.py  0_draft_result_generator.py  0_gnn_supervised_labeler.py  0_preprocess.py  1_draft_result_generator.py  1_train_gnn.py  1_train_gnn_supervised.py  2_gnn.py  2_kmeans.py  2_pagerank.py  2_similarity.py  3_result.py  Alternating_Trainer.ipynb  Alternating_Trainer.py  Alternating_Training.ipynb  BioMixtral_Prompt_Tuner.ipynb  BioMixtral_Prompting_Results.ipynb  EDA_elife.ipynb  EDA_plos.ipynb  FineTune_Gemini.ipynb  GetEmbedding.py  Get_Title_Embedding.ipynb  MergePLOS.py  Preprocess.ipynb  Preprocess.py  Prompting.ipynb  README.md  Result_Compare.ipynb  SelectorTrainer.ipynb  SelectorTrainer.py  Tester.ipynb  Trainer.ipynb  Trainer.py  microservices_approach.ipynb  pyproject.toml  reqirements.txt  result.ipynb  trainer_graphxtract.ipynb  trainer_pagerank.ipynb  (+1 more)
dataset/: biolaysumm_24.csv  header_clusters.json
lib/: __init__.py
lib/data/: collate.py  database_connector.py  downloader_reloader.py  graph_generator.py  similarity_preprocessor.py
lib/dataloaders/: __init__.py  graph_dataloader.py  graphxtract_dataset.py  pagerank_dataset.py  similarity_dataset.py
results/: BioMistral_few_shot_summaries_BioBERT_elife_2.csv  BioMistral_zero_shot_summaries_BioBERT_elife_1.csv  BioMistral_zero_shot_summaries_BioBERT_elife_2.csv
src/: Case_Builder.py  DatasetGenerator.py  MassegeFactory.py  Massege_Factory.py  MessageFactory.py  Prompt_Factory.py  RAG_Calculater.py  ResultCalculator.py  Result_Calculater.py  SelectorGYM.py
(+86 files in other folders)
