[tool.poetry]
name = "biolaysumm-biozu"
version = "0.1.0"
description = ""
authors = ["Ahmet Çağatay Savaşlı <cagatay.savasli@ozu.edu.tr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
scikit-learn = "^1.5.2"
datasets = "^3.1.0"
transformers = "^4.46.3"
torch = "^2.5.1"
peft = "^0.13.2"
evaluate = "^0.4.3"
absl-py = "^2.1.0"
nltk = "^3.9.1"
rouge-score = "^0.1.2"
trl = "^0.12.1"
optimum = "^1.23.3"
textstat = "^0.7.4"
bert-score = "^0.3.13"
lens = "^0.4.5"
sacremoses = "^0.1.1"
huggingface = "^0.0.1"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
